# nexkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml  spec-driven.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
.github/workflows/scripts/: check-release-exists.sh  create-github-release.sh  create-release-packages.sh  get-next-version.sh
docs/: docfx.json  index.md  installation.md  local-development.md  quickstart.md  release-workflow-fix.md
logs/: notification.json  post_tool_use.json  stop.json  subagent_stop.json  user_prompt_submit.json
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
src/nexkit/: __init__.py  gitignore.py
src/specify_cli/: __init__.py
templates/: checklist-template.md  plan-template.md  tasks-template.md  vscode-settings.json
templates/commands/: analyze.md  checklist.md  clarify.md  commit.md  implement-workitem.md  implement.md  plan.md  refine-workitem.md  review.md  specify.md  tasks.md
templates/modes/: dummy.md
tests/integration/: test_git_exclusion.py
tests/unit/: test_gitignore.py  test_version.py
